--- a/CarRental/pom.xml
+++ b/CarRental/pom.xml
@@ -6,4 +6,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - CarRental</name>
   <url>http://maven.apache.org</url>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
